src/objects/Service_Target__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>PSA-CLD-USNONE - External ID.  Unique.  Used to identify the ID of this record in its source system (for data migration).</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID.  Unique.  Used to identify the ID of this record in its source system (for data migration).</inlineHelpText>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>PSA-CLD-USNONE - Program to which this service target belongs</description>
        <formula>Service_Line_Project__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Program to which this service target belongs</inlineHelpText>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>PSA-CLD-USNONE - Parent Project - Project Code</description>
        <formula>Service_Line_Project__r.Project_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Parent Project - Project Code</inlineHelpText>
        <label>Project Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - Lookup ServiceLine project</description>
        <label>Service Line Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Service Targets (Service Line Project)</relationshipLabel>
        <relationshipName>Service_Targets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - Target</description>
        <label>Target</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Target__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Service Targets</relationshipLabel>
        <relationshipName>Service_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Target</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Service Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>